# verbose-spork

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
raylib-static/: CONTROL
raylib-static/share/raylib/: vcpkg.spdx.json  vcpkg_abi_info.txt
source/: Print.h  functions.cpp  main.cpp
src/: main.cpp
src/MainWindow/: GameWindow.cpp  GameWindow.h  MainWindow.cpp  MainWindow.h
src/Processing/: Processing.cpp
src/utils/: LastWish.h
submodules/printcpp/: .gitmodules  Print.h  README.md
submodules/printcpp/MyString/: MyString.cpp  MyString.h  StringMethods.cpp
